Importing release summary for 1.4.30-rc1 release.
git-svn-id: http://svn.asterisk.org/svn/asterisk/tags/1.4.30-rc1@250705 f38db490-d61c-443f-a65b-d21fe96a405b

--- a/asterisk-1.4.30-rc1-summary.html
+++ b/asterisk-1.4.30-rc1-summary.html
@@ -4,7 +4,7 @@
 <body>
 <h1 align="center"><a name="top">Release Summary</a></h1>
 <h3 align="center">asterisk-1.4.30-rc1</h3>
-<h3 align="center">Date: 2010-02-04</h3>
+<h3 align="center">Date: 2010-03-04</h3>
 <h3 align="center">&lt;asteriskteam@digium.com&gt;</h3>
 <hr/>
 <h2 align="center">Table of Contents</h2>
@@ -111,7 +111,7 @@ Reporter: valon24<br/>
 Coders: jpeeler<br/>
 <br/>
 <h3>Category: Channels/chan_local</h3><br/>
-<a href="https://issues.asterisk.org/view.php?id=14992">#14992</a>: [regression] #0013747 not fixed for local channel (Indications are not passed from old peer to new peer during masquerade)<br/>
+<a href="https://issues.asterisk.org/view.php?id=14992">#14992</a>: [patch] [regression] #0013747 not fixed for local channel (Indications are not passed from old peer to new peer during masquerad<br/>
 Revision: <a href="http://svn.digium.com/view/asterisk/branches/1.4?view=revision&revision=244785">244785</a><br/>
 Reporter: davidw<br/>
 Coders: jpeeler<br/>
